--- a/Spam_detection_notebook.ipynb
+++ b/Spam_detection_notebook.ipynb
@@ -1033,6 +1033,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the models perfomed fairly well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
