editing the app

--- a/Spam_detection_notebook.ipynb
+++ b/Spam_detection_notebook.ipynb
@@ -1036,7 +1036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All the models perfomed fairly well."
+    "All the models perfomed fairly well, with all the models having an accuracy of more than 90%. The Support vector classifier perform perfromed more than the other models in both the training and testing data. However, the difference between the training data prediction accuracy and the testing data prediction accuracy score: 2.3,  is greater than that of the other models. The next model that perfomed fairly well is the logistic model which has a difference of 0.7 between training data and testing data accuracy score. T"
    ]
   },
   {
