--- a/Spam_detection_notebook.ipynb
+++ b/Spam_detection_notebook.ipynb
@@ -110,6 +110,7 @@
     }
    ],
    "source": [
+    "pip install nltk\n",
     "#Importing libraries for data cleaning, processing and visualisation\n",
     "import pandas as pd\n",
     "import numpy as np\n",
